src/objects/Apttus_Config2__FieldExpression__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__ConditionExpression__c</fullName>
        <description>Expression used to determine qualifying line items for rollup.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Expression used to determine qualifying line items for rollup.</inlineHelpText>
        <label>Match Expression</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Expression__c</fullName>
        <description>Represents the field expression for field updates and rollups</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Represents the field expression for field updates and rollups</inlineHelpText>
        <label>Value Expression</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupByField__c</fullName>
        <description>Represents rollup field expression aggregation field name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Represents rollup field expression aggregation field name</inlineHelpText>
        <label>Group By Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentField__c</fullName>
        <description>Field to associate line item rollup record to scope.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field to associate line item rollup record to scope.</inlineHelpText>
        <label>Parent Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UpdateField__c</fullName>
        <description>Represents the target field name which gets value at runtime from field update or rollup expressions.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Represents the target field name which gets value at runtime from field update or rollup expressions.</inlineHelpText>
        <label>Update Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UpdateObject__c</fullName>
        <description>Represents update field name containing object which gets value at runtime from field update or rollup expressions</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Represents update field name containing object which gets value at runtime from field update or rollup expressions</inlineHelpText>
        <label>Update Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>